--- a/agent-service/requirements.txt
+++ b/agent-service/requirements.txt
@@ -4,12 +4,16 @@ annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
+bcrypt==4.1.2
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==42.0.5
 dataclasses-json==0.6.4
 distro==1.9.0
+ecdsa==0.19.0
 exceptiongroup==1.2.0
 fastapi==0.110.1
 frozenlist==1.4.1
@@ -40,14 +44,19 @@ numpy==1.26.4
 openai==1.16.1
 orjson==3.10.0
 packaging==23.2
+pyasn1==0.6.0
+pycparser==2.22
 pydantic==1.10.13
 pydantic_core==2.16.3
 Pygments==2.17.2
+python-jose==3.3.0
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 rich==13.7.1
+rsa==4.9
 shellingham==1.5.4
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.29
