--- a/agent-service/pyproject.toml
+++ b/agent-service/pyproject.toml
@@ -10,9 +10,80 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-uvicorn = "^0.23.2"
-langserve = {extras = ["server"], version = ">=0.0.30"}
-pydantic = "<2"
+uvicorn = "0.23.2"
+langserve = "0.0.51"
+pydantic = "1.10.13"
+aiohttp = "3.9.3"
+aiosignal = "1.3.1"
+annotated-types = "0.6.0"
+anyio = "4.3.0"
+async-timeout = "4.0.3"
+attrs = "23.2.0"
+bcrypt = "4.1.2"
+certifi = "2024.2.2"
+cffi = "1.16.0"
+charset-normalizer = "3.3.2"
+click = "8.1.7"
+colorama = "0.4.6"
+cryptography = "42.0.5"
+dataclasses-json = "0.6.4"
+distro = "1.9.0"
+ecdsa = "0.19.0"
+exceptiongroup = "1.2.0"
+fastapi = "0.110.1"
+frozenlist = "1.4.1"
+gitdb = "4.0.11"
+gitpython = "3.1.43"
+googlemaps = "4.10.0"
+h11 = "0.14.0"
+httpcore = "1.0.5"
+httpx = "0.27.0"
+httpx-sse = "0.4.0"
+idna = "3.6"
+jsonpatch = "1.33"
+jsonpointer = "2.4"
+langchain = "0.1.14"
+langchain-cli = "0.0.21"
+langchain-community = "0.0.31"
+langchain-core = "0.1.40"
+langchain-openai = "0.1.1"
+langchain-text-splitters = "0.0.1"
+langsmith = "0.1.40"
+markdown-it-py = "3.0.0"
+marshmallow = "3.21.1"
+mdurl = "0.1.2"
+multidict = "6.0.5"
+mypy-extensions = "1.0.0"
+numpy = "1.26.4"
+openai = "1.16.1"
+orjson = "3.10.0"
+packaging = "23.2"
+pyasn1 = "0.6.0"
+pycparser = "2.22"
+pydantic-core = "2.16.3"
+pygments = "2.17.2"
+python-jose = "3.3.0"
+pyyaml = "6.0.1"
+regex = "2023.12.25"
+requests = "2.31.0"
+rich = "13.7.1"
+rsa = "4.9"
+shellingham = "1.5.4"
+six = "1.16.0"
+smmap = "5.0.1"
+sniffio = "1.3.1"
+sqlalchemy = "2.0.29"
+sse-starlette = "1.8.2"
+starlette = "0.37.2"
+tenacity = "8.2.3"
+tiktoken = "0.6.0"
+tomlkit = "0.12.4"
+tqdm = "4.66.2"
+typer = "0.9.4"
+typing-inspect = "0.9.0"
+typing-extensions = "4.10.0"
+urllib3 = "2.2.1"
+yarl = "1.9.4"
 
 
 [tool.poetry.group.dev.dependencies]
